# samurai_kspace

./: CMakeLists.txt  cell.hpp  interval.hpp  kcell.hpp  kcell_tuple.hpp  kcellnd.hpp  kcells.hpp  main.cpp
examples/: CMakeLists.txt
include/: adaptators.hpp  interval.hpp  kcell.hpp  kcell_tuple.hpp  kcellnd.hpp  kcells.hpp  utils.hpp
tests/: CMakeLists.txt  test_interval.cpp  test_kcell.cpp  test_kcellnd.cpp  test_kcells.cpp  tools.hpp
